syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne(FindOneProductRequest) returns (FindOneProductResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
  rpc FindAll(Empty) returns (stream FindAllProductsResponse) {}
}

// Empty

message Empty {}

// CreateProduct

message CreateProductRequest {
  string name = 1;
  int64 stock = 2;
  int64 price = 3;
  string category = 4;
}

message CreateProductResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// FindOne

message ProductData {
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  int64 price = 4;
  string category = 5;
}

message FindOneProductRequest { int64 id = 1; }

message FindOneProductResponse {
  int64 status = 1;
  string error = 2;
  ProductData data = 3;
}

// FindAll

message FindAllProductsResponse {
  int64 status = 1;
  string error = 2;
  repeated ProductData data = 3;
}

// DecreaseStock

message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}